--- a/environment.yml
+++ b/environment.yml
@@ -11,11 +11,14 @@ dependencies:
 - cloog=0.18.0=0
 - cycler=0.10.0=py27_0
 - dbus=1.10.20=0
+- decorator=4.1.2=py27_0
+- enum34=1.1.6=py27_0
 - expat=2.1.0=0
 - fontconfig=2.12.1=3
 - freetype=2.5.5=2
 - funcsigs=1.0.2=py27_0
 - functools32=3.2.3.2=py27_0
+- get_terminal_size=1.0.0=py27_0
 - glib=2.43.0=1
 - gst-plugins-base=1.8.0=0
 - gstreamer=1.8.0=0
@@ -23,7 +26,10 @@ dependencies:
 - hdf5=1.8.17=2
 - html5lib=0.9999999=py27_0
 - icu=54.1=0
+- ipython=5.3.0=py27_0
+- ipython_genutils=0.2.0=py27_0
 - jbig=2.1=0
+- joblib=0.11=py27_0
 - jpeg=9b=0
 - keras=2.0.5=py27_0
 - libffi=3.2.1=1
@@ -48,12 +54,20 @@ dependencies:
 - numpy=1.13.1=py27_0
 - openssl=1.0.2l=0
 - pandas=0.20.3=py27_0
+- path.py=10.3.1=py27_0
+- pathlib2=2.3.0=py27_0
+- patsy=0.4.1=py27_0
 - pbr=1.10.0=py27_0
+- pexpect=4.2.1=py27_0
+- pickleshare=0.7.4=py27_0
 - pip=9.0.1=py27_1
 - pixman=0.34.0=0
+- prompt_toolkit=1.0.15=py27_0
 - protobuf=3.4.0=py27_0
+- ptyprocess=0.5.2=py27_0
 - pycairo=1.10.0=py27_0
 - pydot=1.0.28=py27_0
+- pygments=2.2.0=py27_0
 - pygpu=0.6.9=py27_0
 - pyparsing=1.5.6=py27_0
 - pyqt=5.6.0=py27_2
@@ -63,18 +77,24 @@ dependencies:
 - pytz=2017.2=py27_0
 - pyyaml=3.12=py27_0
 - qt=5.6.2=5
+- scandir=1.5=py27_0
 - scikit-learn=0.19.0=np113py27_0
 - scipy=0.19.1=np113py27_0
+- seaborn=0.8=py27_0
 - setuptools=36.4.0=py27_1
+- simplegeneric=0.8.1=py27_1
 - sip=4.18=py27_0
 - six=1.10.0=py27_0
 - sqlite=3.13.0=0
+- statsmodels=0.8.0=np113py27_0
 - subprocess32=3.2.7=py27_0
 - tensorflow=1.3.0=0
 - tensorflow-base=1.3.0=py27h0dbb4d0_1
 - tensorflow-tensorboard=0.1.5=py27_0
 - theano=0.9.0=py27_0
 - tk=8.5.18=0
+- traitlets=4.3.2=py27_0
+- wcwidth=0.1.7=py27_0
 - werkzeug=0.12.2=py27_0
 - wheel=0.29.0=py27_0
 - xz=5.2.3=0
@@ -96,10 +116,31 @@ dependencies:
 - root=6.04=py2.7_gcc4.8.2
 - root_numpy=4.3.0=root6.04_py2.7
 - pip:
+  - backports.shutil-get-terminal-size==1.0.0
+  - backports.ssl-match-hostname==3.4.0.2
+  - bayesian-optimization==0.6.0
+  - chardet==2.2.1
+  - fts3==3.6.3
+  - future==0.16.0
   - gfal2-util==1.4.0
+  - hyperopt==0.1
+  - ipython-genutils==0.2.0
+  - lime==0.1.1.29
+  - m2crypto==0.20.2
+  - networkx==2.1
   - ordereddict==1.2
+  - pillow==5.0.0
+  - prompt-toolkit==1.0.15
+  - pymongo==3.7.0
   - python-ldap==2.3.10
+  - pywavelets==0.5.2
+  - requests==2.6.0
   - root-numpy==4.3.0.dev0
+  - root-pandas==0.3.2
+  - scikit-image==0.13.1
+  - scikit-optimize==0.5.2
   - tables==3.4.2
+  - uproot==2.9.3
+  - urllib3==1.10.2
 prefix: /nfs/dust/cms/user/elwoodad/anaconda2/envs/hepML
 
